# systrace

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  alias.c  config.h.in  configure  configure.ac  configure.in  cradle.c  filter.c  intercept-translate.c  intercept.c  intercept.h  lex.c  lex.l  linux-ptrace-syscalls.c  linux-syscalls.c  linux-translate.c  linux-translate.h  linux_syscalls.c  openbsd-syscalls.c  parse.c  parse.h  parse.y  policy.c  register-linux.c  register-openbsd.c  systrace-translate.c  systrace.1  systrace.c  systrace.h
regress/: Makefile.am  Makefile.in  nm.policy.Linux  regress.sh  test_fork.c  test_stat.c  uniq.policy.Linux
